Fixed bug where homepage had an extra div visible in print mode

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1683,9 +1683,8 @@ section.container {
 	.index header,
 	section.main .scrolldown,
 	section.where,
-	section.blurred,
 	section.pic,
-	section.more,
+	section.didyouknow,
 	section.misc,
 	footer {
 		display: none;
